--- a/app/views/testcases/edit.html.erb
+++ b/app/views/testcases/edit.html.erb
@@ -6,6 +6,12 @@
 
       <%= f.label :name %>
       <%= f.text_field :name %>
+	  
+	  <%= f.label :casecate %>
+      <%= f.text_field :casecate %>
+	  
+	  <%= f.label :casetype_id %>
+      <%= f.text_field :casetype_id %>
 
       <%= f.label :steps %>
       <%= f.text_area :steps, class: "editpage" %>
