--- a/app/views/testcases/edit.html.erb
+++ b/app/views/testcases/edit.html.erb
@@ -4,16 +4,21 @@
   <div class="span6 offset1 editpage">
     <%= form_for(@testcase) do |f| %>
 
-      <%= f.label :name %>
+      <%= f.label "testcase name:" %>
       <%= f.text_field :name %>
 	  
-	  <%= f.label :casecate %>
-      <%= f.text_field :casecate %>
+	  <%= f.label "select a categery:" %>
+      <%= f.select :casecate, @catelist %>
 	  
-	  <%= f.label :casetype_id %>
-      <%= f.text_field :casetype_id %>
+	  <%= f.label "testcase will be executed in stage of:" %>
+      <%= f.collection_select :casetype_id, @typelist, :id, :name %>
+	  
+	  <% if @testcase.casecate == "Operation" then %>
+		<%= f.label "Execution will make what devie changed:" %>
+		<%= f.collection_select :devicetype_id, @devicetypes, :id, :name %>
+	  <% end %>
 
-      <%= f.label :steps %>
+      <%= f.label "Execution steps:" %>
       <%= f.text_area :steps, class: "editpage" %>
 	  
       <%= f.submit "Save", class: "btn btn-primary"  %>
