--- a/app/views/achivements/_lead.html.erb
+++ b/app/views/achivements/_lead.html.erb
@@ -19,7 +19,7 @@
 				<% if userexecution[:leftarray].count != 0 then %>
 					&nbsp;&nbsp;&nbsp;* Other testcases executed, (<font class="label"><%= euser.email %></font>)<br>
 					<% userexecution[:leftarray].each do |result| %>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* <%= result.testcase.name %> <%= result.device.name if result.device != nil %> on server:<%= result.sysconfig.sut.name %> <br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* Run case "<%= result.testcase.name if result.testcase != nil %>" <%= result.device.name if result.device != nil %> on server:<%= result.sysconfig.sut.name if result.sysconfig.sut != nil if result.sysconfig != nil %> <br>
 					<% end %>
 				<% end %>
 			<% end %>
