--- a/app/views/devices/edit.html.erb
+++ b/app/views/devices/edit.html.erb
@@ -6,7 +6,10 @@
 
       <%= f.label :name %>
       <%= f.text_field :name %>
-
+	  
+	  <%= f.label "device type:" %>
+	  <%= f.collection_select :devicetype_id, @typelist, :id, :name %>
+	  
       <%= f.label :countnum %>
       <%= f.text_field :countnum %>
 
