--- a/app/views/executions/_testcases_list.html.erb
+++ b/app/views/executions/_testcases_list.html.erb
@@ -12,8 +12,6 @@ function changeresulttype() {
 <% if @selectsut != nil then %>
 
 	<h2>Execute A Testcase On <%= @sysconfig.sut.name %></h2>
-	<h4>Current FW is: <%= if @sysconfig.current_bios != nil then @sysconfig.current_bios.name else "None" end %></h4><br>
-	<h4>Current OS is: <%= if @sysconfig.current_os != nil then @sysconfig.current_os.name else "None" end %></h4><hr>
 
 	<div class="row">
 		<%= form_tag controller: "executions", action: "selecttype" do %>
@@ -77,6 +75,13 @@ function changeresulttype() {
 			<h2><br>No executions existed</h2>
 		<% end %>
 	</ul>
+	<h2>Current System Configuration</h2>
+	<h4>Current FW is: <%= if @sysconfig.current_bios != nil then @sysconfig.current_bios.name else "None" end %></h4><br>
+	<h4>Current OS is: <%= if @sysconfig.current_os != nil then @sysconfig.current_os.name else "None" end %></h4><hr>
+
+	
 <% else %>
 	<h2>Please Select SUT first</h2>
 <% end %>
+
+
