add sysconfig info in twiki

--- a/app/views/tasks/twiki.html.erb
+++ b/app/views/tasks/twiki.html.erb
@@ -64,13 +64,12 @@
 			<% end %> <br>
 		<% end %>
 	<% end %>
-	
 <% end %>	
 
 ---++ <%= index %>. System Configuration List<br>---<br>
 <% index = index + 1 %>
 
-| Config Name | Conponents Inluded |<br>
+<br>| Config Name | Conponents Inluded |<br>
 <% @sysconfiglist.each do |sc| %>
 | 
 <%= sc.sutname %> 
