--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,12 @@
 <% provide(:taskpage, 'btn-large') %>
 
+<div class="row">
 
 <div class="bkgrd span12">
 	<%= render 'tasks/task_list' %>
+
+	<%= render 'tasks/detail_list' %>
 </div>
 
-
-<div id="rightcontent" class="bkgrd span12">
-	<%= render 'tasks/detail_list' %>
 </div>
 
